; ModuleID = '/home/carl/AnghaBench/linux/net/ceph/extr_osd_client.c_pool_cleared_full.c'
source_filename = "/home/carl/AnghaBench/linux/net/ceph/extr_osd_client.c_pool_cleared_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ceph_osd_client = type { i32 }
%struct.ceph_pg_pool_info = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ceph_osd_client*, i32)* @pool_cleared_full to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pool_cleared_full(%struct.ceph_osd_client* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ceph_osd_client*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ceph_pg_pool_info*, align 8
  store %struct.ceph_osd_client* %0, %struct.ceph_osd_client** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ceph_osd_client*, %struct.ceph_osd_client** %4, align 8
  %8 = getelementptr inbounds %struct.ceph_osd_client, %struct.ceph_osd_client* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.ceph_pg_pool_info* @ceph_pg_pool_by_id(i32 %9, i32 %10)
  store %struct.ceph_pg_pool_info* %11, %struct.ceph_pg_pool_info** %6, align 8
  %12 = load %struct.ceph_pg_pool_info*, %struct.ceph_pg_pool_info** %6, align 8
  %13 = icmp ne %struct.ceph_pg_pool_info* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %28

15:                                               ; preds = %2
  %16 = load %struct.ceph_pg_pool_info*, %struct.ceph_pg_pool_info** %6, align 8
  %17 = getelementptr inbounds %struct.ceph_pg_pool_info, %struct.ceph_pg_pool_info* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %15
  %21 = load %struct.ceph_pg_pool_info*, %struct.ceph_pg_pool_info** %6, align 8
  %22 = call i32 @__pool_full(%struct.ceph_pg_pool_info* %21)
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  br label %25

25:                                               ; preds = %20, %15
  %26 = phi i1 [ false, %15 ], [ %24, %20 ]
  %27 = zext i1 %26 to i32
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %25, %14
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local %struct.ceph_pg_pool_info* @ceph_pg_pool_by_id(i32, i32) #1

declare dso_local i32 @__pool_full(%struct.ceph_pg_pool_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
